chandeliers-lus/tests/compile_fail/ui/tc/ops/binop-wrong.stderr
error: Binary operator `+` expects arguments of type int or float, found bool
 --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:3:22
  |
3 |     const B : bool = true + true;
  |                      ^^^^^^^^^^^
  |
note: The left-hand-side is found to be of type bool
 --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:3:22
  |
3 |     const B : bool = true + true;
  |                      ^^^^
note: The right-hand-side is found to be of type bool
 --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:3:29
  |
3 |     const B : bool = true + true;
  |                             ^^^^

error: Binary operator `%` expects arguments of type int, found float
 --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:7:23
  |
7 |     const R : float = 0.1 % 0.5;
  |                       ^^^^^^^^^
  |
note: The left-hand-side is found to be of type float
 --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:7:23
  |
7 |     const R : float = 0.1 % 0.5;
  |                       ^^^
note: The right-hand-side is found to be of type float
 --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:7:29
  |
7 |     const R : float = 0.1 % 0.5;
  |                             ^^^

error: Binary operator `and` expects arguments of type int or bool, found float
  --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:11:23
   |
11 |     const F : float = 0.1 and 0.4;
   |                       ^^^^^^^^^^^
   |
note: The left-hand-side is found to be of type float
  --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:11:23
   |
11 |     const F : float = 0.1 and 0.4;
   |                       ^^^
note: The right-hand-side is found to be of type float
  --> tests/compile_fail/ui/tc/ops/binop-wrong.rs:11:31
   |
11 |     const F : float = 0.1 and 0.4;
   |                               ^^^
